# Accessibility-Checker

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
webapp/: app.py  db.py  requirements.txt  worker.py
webapp/static/: style.css
webapp/templates/: admin.html  base.html  dashboard.html  login.html  task_detail.html
webapt/: __init__.py  cli.py  config.py  langfuse_client.py  mcp_factory.py  md_to_pdf.py  model_factory.py  orchestrator.py
webapt/agents/: __init__.py  accessibility_checker.py  application_analyzer.py  qa_verifier.py
webapt/prompts/: __init__.py  accessibility.py  analysis.py  qa.py
webapt/tools/: __init__.py  agent_runner_tools.py  report_tools.py  screenshot_tools.py  validation_tools.py
